<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textColor="#25d366"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/instructionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:text="@string/please_provide_your_name_and_an_optional_profile_photo"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_background"
        android:clickable="true"
        android:contentDescription="@string/upload_profile_photo"
        android:focusable="true"
        android:padding="26dp"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionTextView" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/type_your_name_here"
        android:padding="16dp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

    <View
        android:id="@+id/lineView"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/custom_green"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/custom_green"
        android:padding="18dp"
        android:text="Next"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView"
        app:layout_constraintVertical_bias="0.251" />

</androidx.constraintlayout.widget.ConstraintLayout>
